Addressing comments
Signed-off-by: Jackie Han <jkhanjob@gmail.com>